# localops-agent

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
agent/: orchestrator.py  policy.py  traces.py
agent/evals/: scenarios.yaml
configs/: policy.yaml  servers.yaml
mcp_servers/: fs_server.py  git_server.py  notes_server.py  runner_server.py
web/: approval.py  main.py
web/static/: index.html  style.css
